# yaml-workflow

./: .dockerignore  .git_commit_msg.tmp  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  action.yml  codecov.yml  commit.tmp  mkdocs.yml  pyproject.toml  requirements.txt  run_workflow.py  workflow_exceptions.py
.github/: IMPROVEMENT_PLAN.md  intermediate-implementation-plan.md  task-modules.md  template-implementation-plan.md  workflow-improvements.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml  release.yml  test-action.yml
docs/: TASK_MODULES.md  cli.md  development.md  features.md  implementation-details.md  index.md  state.md  tasks.md  workflow-structure.md
docs/examples/: ai-integration.md  cookbook.md
docs/examples/custom_tasks/: my_tasks.py
docs/guide/: architecture.md  batch-tasks.md  concepts.md  configuration.md  error-handling.md  flows.md  getting-started.md  kubernetes.md  mcp.md  parallel.md  plugins.md  serve.md  task-development.md  templating.md
docs/guide/tasks/: batch-tasks.md  file-operations.md  http-tasks.md  index.md  python-tasks.md  shell-tasks.md  template-tasks.md
docs/reference/: workflow-schema.md
helm/yaml-workflow/: Chart.yaml  values.yaml
helm/yaml-workflow/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
schema/: README.md  workflow-schema.json
scripts/: gen_ref_nav.py  release.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/cli/: index.html
site/contributing/coding-standards/: index.html
site/contributing/pull-requests/: index.html
site/dependencies/: index.html
site/development/: index.html
site/examples/advanced-hello-world/: index.html
site/examples/basic-workflow/: index.html
site/examples/cookbook/: index.html
site/examples/custom_tasks/: my_tasks.py
site/examples/hello-world/: index.html
site/examples/test-resume/: index.html
site/features/: index.html
site/guide/architecture/: index.html
site/guide/batch-tasks/: index.html
site/guide/concepts/: index.html
site/guide/configuration/: index.html
site/guide/error-handling/: index.html
site/guide/flows/: index.html
site/guide/getting-started/: index.html
site/guide/plugins/: index.html
site/guide/task-development/: index.html
site/guide/tasks/: index.html
site/guide/templating/: index.html
site/overrides/: main.html
site/reference/SUMMARY/: index.html
site/reference/yaml_workflow/: index.html
site/search/: search_index.json
site/state/: index.html
site/tasks/: index.html
site/testing/: index.html
site/workflow-structure/: index.html
src/yaml_workflow/: cli.py  engine.py  exceptions.py  mcp_server.py  runner.py  state.py  step.py  template.py  validator.py  visualize.py  workspace.py
src/yaml_workflow/serve/: __init__.py  (+1 more)
src/yaml_workflow_engine/: __init__.py  cli.py  engine.py  exceptions.py  workspace.py
tasks/: say_hello.py
tests/: conftest.py  test_batch.py  test_batch_tasks.py  test_cli.py  test_custom_tasks.py  test_engine.py  test_engine_template.py  test_examples.py  test_file_tasks.py  test_file_utils.py  test_http_tasks.py  test_imports.py  test_main.py  test_mcp_server.py  test_new_python_tasks.py  test_noop_task.py  test_notify_tasks.py  test_parallel.py  test_performance.py  test_plugin_discovery.py  test_python_tasks.py  test_runner.py  test_schema.py  test_secrets.py  test_serve.py  test_shell_tasks.py  test_state.py  test_step.py  test_task_config.py  test_task_interface.py  test_template.py  test_template_resolution.py  test_template_tasks.py  test_validator.py  test_visualize.py  test_workflow_invalid_flow.py
workflows/: advanced_hello_world.yaml  hello_world.yaml  my_workflow.yaml  sample.yaml  test_resume.yaml
workflows/examples/: api_integration.yaml  batch_file_processing.yaml  data_processing.yaml  parallel_processing.yaml
(+71 files in other folders)
